--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 
-  <section class="grid-section animais" id="animais">
+  <section class="grid-section animais js-scroll" id="animais">
     <h1 class="titulo">Animais Fantásticos</h1>
     <ul class="animais-lista js-tabmenu">
       <li>
@@ -82,7 +82,7 @@
       </section>
     </div>
   </section>
-  <section class="grid-section faq" id="faq">
+  <section class="grid-section faq js-scroll" id="faq">
     <h1 class="titulo">FAQ</h1>
     <dl class="faq-lista js-accordion">
       <dt>Qual a iade dos animais?</dt>
@@ -95,7 +95,7 @@
       <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
     </dl>
   </section>
-  <section class="grid-section contato" id="contato">
+  <section class="grid-section contato js-scroll" id="contato">
     <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="img/mapa.png">
