--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
+  <script src="animacoes.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
